# gsrc

./: AUTHORS  ChangeLog  GNUmakefile.am  GNUmakefile.in  INSTALL  MANIFEST.rec  NEWS  README  README.md  TODO  config.mk.in  configure  configure.ac  gar.conf.mk  gar.env.mk  gar.lib.mk  gar.master.mk  gar.mk  gsrc.in  patch_gcc_bug_fixed.patch  setup.sh.in
alpha/emacs/: Makefile  config.mk  gpg-keyring  sha256sums
alpha/gnutls/: Makefile  config.mk  gpg-keyring  sha256sums
alpha/gsasl/: Makefile  gpg-keyring  sha256sums
alpha/guile/: Makefile  config.mk  gpg-keyring  sha256sums
alpha/rcs/: Makefile  gpg-keyring  sha256sums
alpha/texinfo/: Makefile  sha256sums
alpha/xnee/: Makefile  config.mk  sha256sums
doc/: Makefile.am  Makefile.in  gsrc.info  gsrc.texi  help.txt  stamp-vti
gar.lib/: auto.mk  broken.mk  external.mk  gnustep.mk  info.mk  wrong_arch.mk
gnome/atk/: Makefile  config.mk  sha256sums
gnome/clutter/: Makefile  config.mk  sha256sums
gnome/cogl/: Makefile  config.mk  sha256sums
gnome/dconf/: Makefile  config.mk  sha256sums
gnome/gconf/: Makefile  config.mk  sha256sums
gnome/gcr/: Makefile  config.mk  sha256sums
gnome/gdk-pixbuf/: Makefile  config.mk  sha256sums
gnome/glade/: Makefile  config.mk  sha256sums
gnome/glib/: Makefile  config.mk  sha256sums
gnome/gnome-desktop/: Makefile  config.mk  sha256sums
gnome/gnome-keyring/: Makefile  config.mk  sha256sums
gnome/gnome-vfs/: Makefile  config.mk  sha256sums
gnome/gnumeric/: Makefile  config.mk  sha256sums
gnome/gtk/: Makefile  config.mk  gtk+-3.4.4.sha256sum  sha256sums
gnome/gtk2/: Makefile  config.mk  sha256sums
gnome/gtksourceview/: Makefile  config.mk  sha256sums
gnome/intltool/: Makefile  intltool-0.40.2.sha256sum
gnome/json-glib/: Makefile  config.mk  sha256sums
gnome/libbonobo/: Makefile  config.mk  sha256sums
gnome/libbonoboui/: Makefile  config.mk  sha256sums
gnome/libglade/: Makefile  config.mk  sha256sums
gnome/libgnome/: Makefile  config.mk  sha256sums
gnome/libgnomecanvas/: Makefile  config.mk  sha256sums
gnome/libgnomeui/: Makefile  config.mk  sha256sums
gnome/nautilus/: Makefile  config.mk  sha256sums
gnome/pango/: Makefile  config.mk  sha256sums
gnu/3dldf/: Makefile  config.mk  gpg-keyring  sha256sums
gnu/a2ps/: Makefile  config.mk  gpg-keyring  sha256sums
gnu/acct/: Makefile  config.mk  gpg-keyring  sha256sums
gnu/acm/: Makefile  config.mk  gpg-keyring  sha256sums
gnu/adns/: Makefile  config.mk  sha256sums
gnu/alive/: Makefile  config.mk  gpg-keyring  sha256sums
gnu/anubis/: Makefile  config.mk  gpg-keyring  sha256sums
gnu/apl/: Makefile  config.mk  gpg-keyring  sha256sums
gnu/bzr/files/bzr-2.6b2/: Makefile.in  configure.ac
(+1315 files in other folders)
